<resources>
    <string name="app_name">Med Mate</string>

    <!--Main Menu-->
    <string name="new_game">New Game!</string>
    <string name="resume_game">Resume Game</string>
    <string name="score_board">Score Board</string>
    <string name="rate_us">Rate Us</string>

    <!--First Aid Kit pop Up Menu-->
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <!--First Aid Kit pop Up Menu-->
    <string name="tweezers_menu">Tweezers</string>
    <string name="epipen_menu">Epipen</string>
    <string name="band_aid_menu">Band-Aid</string>
    <string name="defibrillator_menu">Defibrillator</string>
    <string name="ointment_menu">Ointment</string>
    <string name="pen_menu">Pen</string>

    <!--Dialogs-->
    <string name="dlg_success_title">Well Done!</string>
    <string name="dlg_success_msg">You Saved a Person\'s Life!!!</string>

    <string name="dlg_pause_title">Game Paused</string>
    <string name="dlg_pause_msg">What\'s so important??</string>

    <string name="dlg_fail_title">Oh No…</string>
    <string name="dlg_fail_msg">Better Luck Next Time!</string>

    <string name="dlg_defibrillator_title">Clear !!!</string>

    <string name="dlg_rating_title">Rate Us!!</string>
    <string name="dlg_rating_msg">How did you enjoy our game?</string>
    <string name="dlg_rating_comment_1">Thank you for rating us</string>
    <string name="dlg_rating_comment_2">hearts!!</string>

    <!--Score Board-->
    <string name="score_board_title">Score Board</string>

    <!--Save Score Dialog-->
    <string name="dlg_score_title">Congratulations !!!</string>
    <string name="dlg_score_msg_1">You saved them all!</string>
    <string name="dlg_score_msg_2">Would you like to save your score?</string>
    <string name="dlg_score_edit_txt">Enter your name here…</string>

    <!--Too Late Toast-->
    <string name="too_late_toast">Too Late…</string>

    <!--Instruction Book-->
    <string name="defibrillator_instruction_1">Gives an electric shock to</string>
    <string name="defibrillator_instruction_2">restore the heart\'s rhythm</string>
    <string name="pen_instruction">Rarely used to open an airway</string>
    <string name="epipen_instruction"> Used to treat severe allergic reactions</string>
    <string name="ointment_instruction"> Used to clean and prevent infections</string>

    <!--Clues-->
    <string name="clue_1">Be careful when pulling out those thorns…\n it can hurt</string>
    <string name="clue_2">It looks like she got an infection…\n Must be itchy</string>
    <string name="clue_3">Oh no! those wounds should be covered before he\'ll get an infection!</string>
    <string name="clue_4">Bee sting can cause a severe allergic reaction…</string>
    <string name="clue_5">I can\'t find anything wrong…\n Maybe try to check his pulse</string>
    <string name="clue_6">I tried anything I could!\n It\'s time to open an airway…</string>

    <!--Guidance-->
    <string name="guidance_title">It\'s Your First Game!</string>
    <string name="guidance_tv">Would you like some guidance?</string>
    <string name="medkit_guide_tv">Here you got your tools, a book instruction, a button for checking pulse, and the nurse\'s clue.</string>
    <string name="epipen_guide_tv">Did you know?\nEpipen should be\ninjected to the thigh</string>

</resources>
