<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layoutDialogContainer"
    android:layout_margin="20dp"
    android:padding="20dp">
    
    <RelativeLayout
        android:id="@+id/layoutDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:layout_centerHorizontal="true">
        
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:padding="10dp"
            android:text="@string/difficulty"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_title"
            android:paddingHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/easy"
            style="@style/MenuBtnStyle"
            android:textColor="@color/colorWhite"
            android:background="@drawable/difficulty_btn_selector"
            android:gravity="center"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/btn_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_easy"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/medium"
            style="@style/MenuBtnStyle"
            android:textColor="@color/colorWhite"
            android:background="@drawable/difficulty_btn_selector"
            android:gravity="center"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/btn_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_medium"
            android:paddingHorizontal="30dp"
            android:layout_marginBottom="50dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/hard"
            style="@style/MenuBtnStyle"
            android:textColor="@color/colorWhite"
            android:background="@drawable/difficulty_btn_selector"
            android:gravity="center"
            android:layout_centerHorizontal="true"/>
        
    </RelativeLayout>

    <ImageButton
        android:id="@+id/btn_cancel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="265dp"
        android:layout_marginHorizontal="25dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/cancel_btn_selector"
        android:background="@color/transparent"
        android:scaleType="fitCenter"/>

</RelativeLayout>