<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/nature_bg_zoom"
    android:layoutDirection="ltr">

    <ImageView
        android:id="@+id/white_bg_6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/victim_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_girl_3_full"
        android:scaleType="centerCrop"
        android:visibility="visible"/>
    <ImageView
        android:id="@+id/girl3_blue_face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/victim_6"
        android:layout_marginTop="103dp"
        android:src="@drawable/ic_girl_3_blue_face"/>
    <ImageView
        android:id="@+id/girl3_eyes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/girl3_blue_face"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_girl_3_eyes"/>
    <ImageView
        android:id="@+id/girl3_mouth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/girl3_eyes"
        android:layout_marginTop="47dp"
        android:src="@drawable/ic_girl_3_mouth"/>

    <ImageView
        android:id="@+id/body_o6"
        android:layout_width="195dp"
        android:layout_height="160dp"
        android:layout_alignBottom="@id/victim_6"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"/>

    <ImageView
        android:id="@+id/neck_anatomy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/victim_6"
        android:layout_marginTop="234.5dp"
        android:src="@drawable/ic_neck_anatomy"
        android:alpha="0.5"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/pen_cricothy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/neck_anatomy"
        android:layout_alignStart="@id/neck_anatomy"
        android:layout_marginBottom="26dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_pen_cricothy"
        android:visibility="invisible"/>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="8dp"
        android:layout_alignBottom="@id/pen_cricothy"
        android:layout_alignStart="@id/pen_cricothy"
        android:background="@color/colorBlack"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/used_band_aid_o6_1"
        android:layout_width="34dp"
        android:layout_height="13dp"
        android:layout_alignBottom="@id/pen_cricothy"
        android:layout_alignEnd="@id/pen_cricothy"
        android:layout_marginEnd="21dp"
        android:src="@drawable/ic_band_aid_used"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/good_spot"
        android:layout_width="11dp"
        android:layout_height="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/neck_anatomy"
        android:layout_marginTop="22dp"/>

    <ImageView
        android:id="@+id/item6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_pen"
        android:visibility="gone"/>

    <com.example.android1project.MedKit
        android:id="@+id/first_aid_kit_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_first_aid_kit"/>

    <com.example.android1project.HealthBar
        android:id="@+id/hp_bar6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="6dp"
        android:padding="5dp"
        android:progress="100"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:background="@color/transparent"
        android:progressDrawable="@drawable/progress_drawable"/>

    <RelativeLayout
        android:id="@+id/open_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_book_open"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="45dp"
            android:text="@string/defibrillator_instruction_1"
            android:textSize="15sp"
            android:textStyle="italic|bold"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="78dp"
            android:layout_marginStart="45dp"
            android:text="@string/defibrillator_instruction_2"
            android:textSize="15sp"
            android:textStyle="italic|bold"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="147dp"
            android:layout_marginStart="50dp"
            android:text="@string/pen_instruction"
            android:textSize="15sp"
            android:textStyle="italic|bold"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="185dp"
            android:text="@string/epipen_instruction"
            android:textSize="15sp"
            android:textStyle="italic|bold"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="147dp"
            android:layout_marginStart="185dp"
            android:text="@string/ointment_instruction"
            android:textSize="15sp"
            android:textStyle="italic|bold"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"/>
        <ImageButton
            android:id="@+id/close_book_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="212dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_cancel_btn"
            android:background="@color/transparent"
            android:scaleType="centerCrop"/>
    </RelativeLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ekg_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hp_bar6"
        android:layout_alignParentEnd="true"
        android:layout_margin="30dp"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/ekg_normal"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/play_pause_btn_6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:src="@drawable/ic_pause_btn"
        android:background="@color/transparent"
        android:scaleType="fitXY"/>

</RelativeLayout>