<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/nature_bg_zoom"
    android:layoutDirection="ltr">

    <ImageView
        android:id="@+id/white_bg_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/victim_1z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_boy_1_zoom"
        android:scaleType="centerCrop"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/leg1_o1"
        android:layout_width="60dp"
        android:layout_height="320dp"
        android:layout_alignStart="@id/victim_1z"
        android:layout_alignBottom="@id/victim_1z"
        android:layout_marginStart="55dp"/>
    <ImageView
        android:id="@+id/leg2_o1"
        android:layout_width="60dp"
        android:layout_height="320dp"
        android:layout_alignBottom="@id/victim_1z"
        android:layout_alignEnd="@id/victim_1z"
        android:layout_marginEnd="60dp"/>

    <ImageView
        android:id="@+id/thorn_1z"
        android:layout_width="52dp"
        android:layout_height="5dp"
        android:layout_alignBottom="@id/victim_1z"
        android:layout_alignStart="@id/victim_1z"
        android:layout_marginBottom="80dp"
        android:layout_marginStart="67dp"
        android:src="@drawable/ic_thorn"
        android:rotation="180"
        android:visibility="visible"/>
    <ImageView
        android:id="@+id/skin_1z"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/victim_1z"
        android:layout_alignStart="@id/victim_1z"
        android:layout_marginBottom="78dp"
        android:layout_marginStart="66dp"
        android:src="@drawable/ic_skin_above_thorn"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/thorn_2z"
        android:layout_width="52dp"
        android:layout_height="5dp"
        android:layout_alignBottom="@id/victim_1z"
        android:layout_alignStart="@id/victim_1z"
        android:layout_marginBottom="120dp"
        android:layout_marginStart="60dp"
        android:src="@drawable/ic_thorn"
        android:rotation="180"
        android:visibility="visible"/>
    <ImageView
        android:id="@+id/skin_2z"
        android:layout_width="30dp"
        android:layout_height="10dp"
        android:layout_alignBottom="@id/victim_1z"
        android:layout_alignStart="@id/victim_1z"
        android:layout_marginBottom="118dp"
        android:layout_marginStart="59dp"
        android:src="@drawable/ic_skin_above_thorn"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/thorn_3z"
        android:layout_width="52dp"
        android:layout_height="5dp"
        android:layout_alignBottom="@id/victim_1z"
        android:layout_alignStart="@id/victim_1z"
        android:layout_marginBottom="315dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_thorn"
        android:rotation="180"
        android:visibility="visible"/>
    <ImageView
        android:id="@+id/skin_3z"
        android:layout_width="33dp"
        android:layout_height="12dp"
        android:layout_alignBottom="@id/victim_1z"
        android:layout_alignStart="@id/victim_1z"
        android:layout_marginBottom="312dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_skin_above_thorn"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/thorn_4z"
        android:layout_width="52dp"
        android:layout_height="5dp"
        android:layout_alignBottom="@id/victim_1z"
        android:layout_alignEnd="@id/victim_1z"
        android:layout_marginBottom="155dp"
        android:layout_marginEnd="60dp"
        android:src="@drawable/ic_thorn"
        android:visibility="visible"/>
    <ImageView
        android:id="@+id/skin_4z"
        android:layout_width="35dp"
        android:layout_height="12dp"
        android:layout_alignBottom="@id/victim_1z"
        android:layout_alignEnd="@id/victim_1z"
        android:layout_marginBottom="153dp"
        android:layout_marginEnd="60dp"
        android:src="@drawable/ic_skin_above_thorn"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/thorn_5z"
        android:layout_width="52dp"
        android:layout_height="5dp"
        android:layout_alignBottom="@id/victim_1z"
        android:layout_alignEnd="@id/victim_1z"
        android:layout_marginBottom="122dp"
        android:layout_marginEnd="70dp"
        android:src="@drawable/ic_thorn"
        android:visibility="visible"/>
    <ImageView
        android:id="@+id/skin_5z"
        android:layout_width="32dp"
        android:layout_height="12dp"
        android:layout_alignBottom="@id/victim_1z"
        android:layout_alignEnd="@id/victim_1z"
        android:layout_marginBottom="119dp"
        android:layout_marginEnd="70dp"
        android:src="@drawable/ic_skin_above_thorn"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/thorn_6z"
        android:layout_width="52dp"
        android:layout_height="5dp"
        android:layout_alignBottom="@id/victim_1z"
        android:layout_alignEnd="@id/victim_1z"
        android:layout_marginBottom="78dp"
        android:layout_marginEnd="62dp"
        android:src="@drawable/ic_thorn"
        android:visibility="visible"/>
    <ImageView
        android:id="@+id/skin_6z"
        android:layout_width="30dp"
        android:layout_height="10dp"
        android:layout_alignBottom="@id/victim_1z"
        android:layout_alignEnd="@id/victim_1z"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="62dp"
        android:src="@drawable/ic_skin_above_thorn"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/item1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_tweezers_open"
        android:visibility="gone"/>

    <!--<ImageView
        android:id="@+id/first_aid_kit_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_first_aid_kit"/>-->
    <com.example.android1project.MedKit
        android:id="@+id/first_aid_kit_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_first_aid_kit"/>
    <ImageView
        android:id="@+id/first_aid_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/first_aid_kit_1"
        android:layout_alignEnd="@id/first_aid_kit_1"
        android:src="@drawable/ic_first_aid_guide"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/guide_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hp_bar1z"
        android:layout_marginHorizontal="20dp"
        android:padding="10dp"
        android:text="@string/medkit_guide_tv"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:background="@drawable/info_msg_background"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:visibility="gone"/>


    <com.example.android1project.HealthBar
        android:id="@+id/hp_bar1z"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="6dp"
        android:padding="5dp"
        android:progress="100"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:background="@color/transparent"
        android:progressDrawable="@drawable/progress_drawable"/>
    <ImageView
        android:id="@+id/hp_guide"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="6dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorLightYellow"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/open_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_book_open"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="45dp"
            android:text="@string/defibrillator_instruction_1"
            android:textSize="15sp"
            android:textStyle="italic|bold"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="78dp"
            android:layout_marginStart="45dp"
            android:text="@string/defibrillator_instruction_2"
            android:textSize="15sp"
            android:textStyle="italic|bold"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="147dp"
            android:layout_marginStart="50dp"
            android:text="@string/pen_instruction"
            android:textSize="15sp"
            android:textStyle="italic|bold"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="185dp"
            android:text="@string/epipen_instruction"
            android:textSize="15sp"
            android:textStyle="italic|bold"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="147dp"
            android:layout_marginStart="185dp"
            android:text="@string/ointment_instruction"
            android:textSize="15sp"
            android:textStyle="italic|bold"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"/>
        <ImageButton
            android:id="@+id/close_book_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="212dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_cancel_btn"
            android:background="@color/transparent"
            android:scaleType="centerCrop"/>
    </RelativeLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ekg_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hp_bar1z"
        android:layout_alignParentEnd="true"
        android:layout_margin="30dp"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/ekg_normal"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/play_pause_btn_1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:src="@drawable/ic_pause_btn"
        android:background="@color/transparent"
        android:scaleType="fitXY"/>

</RelativeLayout>